<resources>
    <string name="pref_zoomctrl">Zoom buttons</string>
    <string name="pref_screen_orientation">Screen Orientation</string>
    <string name="pref_screen_orientation_summary">Choose the screen orientation</string>
    <string name="pref_googlelanguagecode_summary">Localization of Google Map</string>
    <string name="pref_googlelanguagecode">Google Map language code</string>
    <string name="pref_hidepoi_summary">Don\'t show POI icons on the map</string>
    <string name="pref_hidepoi">Hide POI</string>
    <string name="prefcat_main_poi">POI</string>
    <string name="pref_northdirectionup_summary">Turn map on the northern direction</string>
    <string name="pref_northdirectionup">Direction on the North</string>
    <string name="pref_drivingdirectionup_summary">Turn the map in driving direction</string>
    <string name="pref_drivingdirectionup">Driving direction up</string>
    <string name="pref_zoomminlevel_summary">Set this zoom level at long press on minus button</string>
    <string name="pref_zoomminlevel">Favorite min zoom</string>
    <string name="pref_zoommaxlevel_summary">Set this zoom level at long press on plus button</string>
    <string name="pref_zoommaxlevel">Favorite max zoom</string>
    <string name="pref_zoomwithspeed">Zoom dependent on Speed</string>
    <string name="pref_zoomwithspeed_summary">Automatically zoom dependent on Speed</string>
    <string name="pref_bottomzoomcontrol_summary">Show zoom buttons at bottom side</string>
    <string name="pref_bottomzoomcontrol">Bottom zoom</string>
    <string name="app_user_id" />
    <string name="app_user_label">Jim Fandango</string>
    <string name="prefcat_main_misc">Misc</string>
    <string name="pref_accuracy_summary">Show blue disk indicator like Google Map</string>
    <string name="pref_accuracy">Accuracy indicator</string>
    <string name="pref_keepscreenon_summaryoff">Screen will be automatically turned off in case of
		inactivity</string>
    <string name="pref_keepscreenon_summary">Screen will not be turned off while you browse map</string>
    <string name="pref_keepscreenon">Keep the screen on</string>
    <string name="pref_showtitle_summary">Hide window title with map name and etc</string>
    <string name="pref_showtitle">Show window title</string>
    <string name="pref_showstatusbar_summary">Hide status bar in map mode</string>
    <string name="pref_showstatusbar">Show status bar</string>
    <string name="pref_turnoffautoreindex">Switch off auto reindexing</string>
    <string name="pref_turnoffautoreindex_summary">Switch off check of the size and datetime map files</string>
    <string name="pref_gpsfastupdate">Fast update GPS data</string>
    <string name="pref_gpsfastupdate_summary">Slow updating saves the battery theoretically</string>
    <string name="pref_crosshair">Crosshair on map centre</string>
    <string name="pref_crosshair_summary">Show little crosshair on centre of the map</string>
    <string name="pref_usermap_enabled">Enabled map</string>
    <string name="pref_usermap_enabled_summary">Add map to maps list</string>
    <string name="pref_usermap_name">Name</string>
    <string name="pref_usermap_baseurl">Base URL</string>
    <string name="pref_usermap_projection">Projection</string>
    <string name="prefcat_main_look">Look &amp; Feel</string>
    <string name="pref_main_lookscreen">Look &amp; Feel</string>
    <string name="pref_main_lookscreen_summary">Customize the appearance</string>
    <string name="prefcat_main_maps">Maps</string>
    <string name="prefcat_main_indexing">Indexing</string>
    <string name="pref_main_maps">Predefined Maps</string>
    <string name="pref_main_maps_summary">Internet connection is required</string>
    <string name="pref_main_usermaps">User defined maps</string>
    <string name="pref_main_usermaps_summary">Maps from /sdcard/TschekkoMaps/maps</string>
    <string name="prefcat_main_tiledatabase">Database settings</string>
    <string name="pref_turnofftileexpire">Ignore tile expire info</string>
    <string name="pref_turnofftileexpire_summary">Switch off checking of map tile expire info</string>
    <string name="prefcat_main_searchprovider">Toponym Searchprovider</string>
    <string name="pref_searchprovider">Search Provider</string>
    <string name="pref_searchprovider_summary">Select which Implementation to use</string>
    <string name="prefcat_main_predefinedmaps" />
    <string name="btn_clear_cache_title">Clear cache</string>
    <string name="pref_internalcache_title">Internal cache</string>
    <string name="pref_internalcache_summary">Used for temp storage map tiles. Size: %dKB/4MB</string>
    <string name="pref_index_title">Index database</string>
    <string name="pref_index_summary">Tiles index of offline maps. Size: %dKB</string>
    <string name="pref_showscalebar_summary">Show scale bar at left bottom corner</string>
    <string name="pref_showscalebar">Show scale bar</string>
    <string name="pref_units_summary">Distance, speed units</string>
    <string name="pref_units">Units</string>
    <string name="prefcat_main_proximity">Proximity Settings</string>
    <string name="pref_proximity_distance">Please choose default distance</string>
    <string name="prefcat_proximity_screen">Proximity Settings</string>
    <string name="prefcat_proximity_screen_summary">Default Settings for proximity alerts</string>
    <string name="pref_proximity_enter">Alert on enter (or leave) area with given radius</string>
    <string name="pref_proximity_enter_summary">Checked means - alert will be triggered on \'entering\' zone</string>
    <string name="pref_proximity_enter_on">Alert will be triggered on \'entering\' zone</string>
    <string name="pref_proximity_enter_off">Alert will be triggered on \'leaving\' zone</string>
    <string name="prefcat_main_overlays">Overlay settings</string>
    <string name="prefcat_overlays_screen">Overlay appearance</string>
    <string name="prefcat_overlays_screen_summary">personalize your overlay appearance</string>
    <string name="pref_overlays_geogrid">show a map grid</string>
    <string name="pref_overlays_geogrid_summary">display a grid overlay based on degree</string>
    <string name="pref_overlays_geogrid_on">map grid will be displayed</string>
    <string name="pref_overlays_geogrid_off">map grid will not be displayed</string>
    <string name="pref_overlays_distcircle">show distance circles</string>
    <string name="pref_overlays_distcircle_summary">display distance circles around current position</string>
    <string name="pref_overlays_distcircle_on">circles will be displayed</string>
    <string name="pref_overlays_distcircle_off">circles will not be displayed</string>
    <string name="pref_overlays_lastpos">show last positions</string>
    <string name="pref_overlays_lastpos_summary">display last positions</string>
    <string name="pref_overlays_lastpos_on">positions will be displayed</string>
    <string name="pref_overlays_lastpos_off">positions will not be displayed</string>
    <string name="pref_overlays_vkpz">show Vienna/Austria Short Parking Area</string>
    <string name="pref_overlays_vkpz_summary">display a overlay for commercial parking</string>
    <string name="pref_overlays_vkpz_on">Parking Info is now on</string>
    <string name="pref_overlays_vkpz_off">Parking info will not be displayed</string>
    <string name="pref_trackdisplay">Percent of track-points to display</string>
    <string name="pref_trackdisplay_summary">to speedup the drawing of lengthy tracks the number
        of track-points can be reduced with almost no visual impact</string>
    <string name="pref_color_settings">Color settings</string>
    <string name="pref_color_settings_summary">choose colors used to draw lines</string>
    <string name="pref_color_route">Route color</string>
    <string name="pref_color_route_summary">Route color</string>
    <string name="pref_color_route_current">active Route color</string>
    <string name="pref_color_turnroute">Turn by Turn Route color</string>
    <string name="pref_color_turnroute_summary">Route color</string>
    <string name="pref_color_route_summary_current">active Route color</string>
    <string name="pref_color_track">Track color</string>
    <string name="pref_color_track_summary">Track color</string>
    <string name="pref_color_track_current">active Track color</string>
    <string name="pref_color_track_summary_current">active Track color</string>
    <string name="pref_color_distance">Distance color</string>
    <string name="pref_color_distance_summary">Distance color</string>
    <string name="pref_color_distance_circle">Distance circle color</string>
    <string name="pref_color_distance_circle_summary">Distance circle color</string>
    <string name="pref_color_geogrid">Geogrid color</string>
    <string name="pref_color_geogrid_summary">Geogrid color</string>
    <string name="app_name">OutLander</string>
    <string name="app_description">Outdoor navigation tool</string>
    <string name="app_name_itemizedoverlay">OSMViewer ItemizedOverlay</string>
    <string name="unknown">Unknown</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_mylocation">My location</string>
    <string name="menu_mapselector">Maps</string>
    <string name="menu_compass">Compass</string>
    <string name="menu_instruments">Instruments</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_gpsstatus">GPS Status</string>
    <string name="menu_add">Add</string>
    <string name="menu_addpoi">Add POI</string>
    <string name="menu_addcategory">Add Category</string>
    <string name="menu_addroute">Add Route</string>
    <string name="menu_poilist">POIs</string>
    <string name="menu_routelist">Routes</string>
    <string name="menu_tracklist">Tracks</string>
    <string name="menu_categorylist">Category</string>
    <string name="menu_import">Import</string>
    <string name="menu_deleteall">Delete All</string>
    <string name="menu_showall">Show All</string>
    <string name="menu_hideall">Hide All</string>
    <string name="menu_publishpoi">Publish POI</string>
    <string name="menu_showexternalpoi">Use external Viewer</string>
    <string name="menu_getWikiPedia">Lookup Info</string>
    <string name="menu_getAddress">Lookup Address</string>
    <string name="menu_shareLocation">Share this location</string>
    <string name="menu_openurl">Open URL in browser</string>
    <string name="menu_functions">what to do next?</string>
    <string name="menu_showhide">show/hide</string>
    <string name="menu_showhide_on">show side panel</string>
    <string name="menu_showhide_off">hide side panel</string>
    <string name="menu_vkpz">Check Vienna KPZ</string>
    <string name="mnm">.mnm</string>
    <string name="tar">.tar</string>
    <string name="menu_doNotSave">Abort</string>
    <string name="PoiTitle">Title</string>
    <string name="GraphTitle">Elevation Information</string>
    <string name="PoiCategoryTitle">POI Categories</string>
    <string name="RouteCategoryTitle">Route Categories</string>
    <string name="PoiLocation">Location</string>
    <string name="NaviMode">Navigation Mode</string>
    <string name="PoiDescr">Description</string>
    <string name="FileName">Import from KML, GPX file</string>
    <string name="ToPOICategory">To POI category</string>
    <string name="ToRouteCategory">To Route category</string>
    <string name="SelectFile">Select file</string>
    <string name="Import">Import</string>
    <string name="menu_record">start/stop recording</string>
    <string name="nav_feet">external routing - pedestrian</string>
    <string name="nav_car">external routing - car</string>
    <string name="nav_internal">internal routing - beeline</string>
    <string name="nav_internal_route">internal routing - show</string>
</resources>