<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:title="Search"
        />

    <!--
	<item
		android:id="@+id/compass"
		android:icon="@android:drawable/ic_menu_compass"
		android:title="@string/menu_compass"
		android:showAsAction="ifRoom"></item>
	<item
		android:id="@+id/poilist"
		android:icon="@android:drawable/ic_menu_myplaces"
		android:title="@string/menu_poilist"></item>
	<item
		android:id="@+id/routelist"
		android:icon="@android:drawable/ic_menu_myplaces"
		android:title="@string/menu_routelist"></item>
	<item
		android:id="@+id/tracklist"
		android:icon="@android:drawable/ic_menu_myplaces"
		android:title="@string/menu_tracklist"></item>
	<item
		android:id="@+id/mylocation"
		android:icon="@android:drawable/ic_menu_mylocation"
		android:title="@string/menu_mylocation"
		android:showAsAction="ifRoom"></item>
	<item
		android:id="@+id/mapselector"
		android:title="@string/menu_mapselector"
		android:icon="@android:drawable/ic_menu_mapmode"
		android:showAsAction="ifRoom">
		<menu>
			<group
				android:menuCategory="container"
				android:id="@+id/menu_group_maps">
			</group>
		</menu>
	</item>
    -->

    <item
        android:id="@+id/recording"
        android:title="@string/menu_record"
        android:showAsAction="ifRoom">
    </item>

    <!--
          item
		android:id="@+id/instruments"
		android:title="@string/menu_instruments"></item
    -->
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        android:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        android:showAsAction="ifRoom">
    </item>

</menu>