<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".fragments.RouteDialogFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/PoiTitle"
            android:textAppearance="?android:attr/textAppearance" >
        </TextView>

        <EditText
            android:id="@+id/Name"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:text="@+id/Name"
            android:textAppearance="?android:attr/textAppearanceSmall" >
        </EditText>

        <TextView
            android:id="@+id/TextDescr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/PoiDescr"
            android:textAppearance="?android:attr/textAppearance" >
        </TextView>

        <EditText
            android:id="@+id/Descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="0.06"
            android:inputType="text"
            android:maxHeight="100dip"
            android:minLines="6"
            android:text="@+id/Descr"
            android:textAppearance="?android:attr/textAppearanceSmall" >
        </EditText>

        <TextView
            android:id="@+id/GraphTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/GraphTitle"
            android:textAppearance="?android:attr/textAppearance" >
        </TextView>

        <LinearLayout
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dip"
            android:layout_weight="0.02"
            android:gravity="center"
            android:minHeight="30dip"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/discardButton"
                style="@android:style/Widget.Holo.Button.Borderless.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel" />
            <Button
                android:id="@+id/saveButton"
                style="@android:style/Widget.Holo.Button.Borderless.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/ok" />
            
            
        </LinearLayout>
    </LinearLayout>

</ScrollView>